# autozig

./: .clippy.toml  .gitignore  AUTOZIG_DUAL_BINDING_FEATURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  PIC_FIX_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TRAIT_SUPPORT_DESIGN.md  TRAIT_SUPPORT_ROADMAP.md  ZERO_UNSAFE_ACHIEVEMENT.md  rustfmt.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
autozig-console/: Cargo.toml  README.md  build.rs
autozig-console/src/: lib.rs
demo/: Cargo.toml  build.rs
demo/src/: main.rs
docs/: AUTOZIG_PROJECT_COMPLETION_SUMMARY.md  AUTOZIG_功能总结.md  BUILD_ZIG_LINKING_ISSUE.md  CI_CD.md  COMPILATION_MODES.md  CPU_BASELINE_FIX_REPORT.md  C_INTEROP_AND_MODULAR_COMPILATION_COMPLETE.md  DESIGN.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MODULAR_COMPILATION_FINAL_REPORT.md  MODULAR_COMPILATION_SUMMARY.md  PHASE2_IMPLEMENTATION_STATUS.md  PHASE3_AND_CICD_COMPLETE.md  PHASE3_ASYNC_DESIGN.md  PHASE3_COMPLETE_FINAL_STATUS.md  PHASE3_COMPLETION_SUMMARY.md  PHASE3_FINAL_STATUS.md  PHASE3_GENERICS_DESIGN.md  PHASE3_IMPLEMENTATION_COMPLETE.md  PHASE3_IMPLEMENTATION_STATUS.md  PHASE4_IMPLEMENTATION_STATUS.md  PHASE4_STREAM_DESIGN.md  PHASE_4_2_IMPLEMENTATION_COMPLETE.md  PHASE_4_ADVANCED_FEATURES.md  PHASE_5_WASM_DESIGN.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS_2026_01_05.md  PUBLISHING_TO_CRATES_IO.md  QUICK_START.md  SECURITY_BEST_PRACTICES.md  TUTORIAL.md  ZIG_TEST_FEATURE_SUMMARY.md  ZIG_TEST_INTEGRATION.md  index.html  wasm3.0.md
docs/www/: REFRESH_BROWSER.md  index.html
docs/www/pkg/: autozig_wasm_light.d.ts  autozig_wasm_light.js  autozig_wasm_light_bg.wasm  autozig_wasm_light_bg.wasm.d.ts  package.json
engine/: Cargo.toml
engine/src/: lib.rs  scanner.rs  ts_generator.rs  type_mapper.rs  zig_compiler.rs
examples/: README.md  WASM_EXAMPLES_FIX_SUMMARY.md  verify_all.sh
examples/abi_test/: Cargo.toml  build.rs
examples/abi_test/src/: main.rs
examples/array_ffi/: Cargo.toml  README.md  build.rs
examples/array_ffi/src/: main.rs
examples/array_param_test/: Cargo.toml  build.rs
examples/array_param_test/src/: main.rs
examples/array_param_test/src/zig/: array_ops.zig
examples/async/: Cargo.toml  build.rs
examples/async/src/: async_impl.zig  main.rs
examples/complex/: Cargo.toml
examples/complex/src/: main.rs
examples/enums/: Cargo.toml
examples/enums/src/: main.rs
examples/ffi_allocator/: Cargo.toml  README.md  build.rs
examples/ffi_allocator/.cargo/: config.toml
examples/ffi_allocator/src/: main.rs
examples/ffi_allocator/src/zig/: counter.zig
examples/generics/: Cargo.toml
examples/generics/src/: main.rs
examples/leak_test/: Cargo.toml  build.rs  check_cc.zig
examples/leak_test/src/: main.rs
examples/leak_test/src/zig/: memory.zig
examples/modular_complex/: Cargo.toml  Complex  README.md  build.rs
examples/modular_complex/src/: main.rs
examples/modular_complex/src/data/: array_ops.zig
examples/modular_complex/src/math/: vector.zig
examples/modular_complex/src/utils/: string_ops.zig
examples/rust_export/: Cargo.toml  build.rs
examples/rust_export/src/: lib.rs
examples/rust_export/www/: autozig_rust_export.wasm  bindings.d.ts  bindings.js  index.html
examples/security_tests/: Cargo.toml  README.md  build.rs
examples/security_tests/src/: main.rs
examples/simd_detect/: Cargo.toml  README.md  build.rs
examples/simd_detect/src/: main.rs  simd.zig
examples/simple_dual_test/: Cargo.toml  build.rs
examples/simple_dual_test/src/: lib.rs  test.zig
examples/smart_lowering/: Cargo.toml
examples/smart_lowering/src/: main.rs  slices.zig  strings.zig
examples/stream_basic/: Cargo.toml  build.rs
examples/stream_basic/src/: main.rs  stream.zig
examples/structs/: Cargo.toml
examples/structs/src/: main.rs
examples/trait_calculator/: Cargo.toml  build.rs
examples/trait_calculator/src/: main.rs
examples/trait_hasher/: Cargo.toml
examples/trait_hasher/src/: main.rs
examples/wasm64bit/: .gitignore  AUTOZIG_DUAL_BINDING.md  Cargo.toml  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  TEST_MACRO_SYNTAX.md  WASM64_BUILD_GUIDE.md  WASM64_GUIDE_CN.md  WASM64_IMPLEMENTATION_COMPLETE.md  WASM64_STATUS.md  build.rs  build.sh
examples/wasm64bit/.cargo/: config.toml
examples/wasm64bit/src/: lib.rs  wasm64.zig
examples/wasm64bit/www/: index.html
examples/wasm64print/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  build.rs
examples/wasm64print/src/: console.zig  lib.rs
examples/wasm64print/www/: build.sh  index.html  loader.js
examples/wasm_filter/: .gitignore  Cargo.toml  README.md  build.rs  build_and_serve.sh
examples/wasm_filter/.cargo/: config.toml
examples/wasm_filter/src/: lib.rs
examples/wasm_filter/www/: index.html
examples/wasm_light/: COLORED_LIGHTS_UPDATE.md  Cargo.toml  README.md  SIMD_OPTIMIZATION.md  VERIFICATION_REPORT.md  build.rs  build_and_serve.sh
examples/wasm_light/.cargo/: config.toml
examples/wasm_light/src/: lib.rs  light.zig
examples/wasm_light/www/: PORT_INFO.md  TEST_INSTRUCTIONS.md  diagnose.sh  index.html
examples/zero_copy/: Cargo.toml  README.md  build.rs
examples/zero_copy/src/: main.rs  zero_copy.zig
examples/zig-c/: Cargo.toml  README.md
examples/zig-c/src/: main.rs  math.c  wrapper.zig
macro/: Cargo.toml
macro/src/: lib.rs
parser/: Cargo.toml
parser/src/: lib.rs
scripts/: install-hooks.sh  publish-v0.1.1.sh
src/: ffi_types.rs  lib.rs  stream.rs  zero_copy.rs
