[package]
name = "autozig-console"
version = "0.1.0"
edition = "2021"
authors = ["AutoZig Contributors"]
description = "Console logging support for AutoZig WASM applications"
license = "MIT OR Apache-2.0"
repository = "https://github.com/layola13/autozig"
keywords = ["wasm", "wasm64", "console", "logging", "zig"]
categories = ["wasm", "development-tools::debugging"]

[dependencies]
autozig = { path = "..", version = "0.1.2" }

[build-dependencies]
autozig-build = { path = "../gen/build", version = "0.1.2" }
anyhow = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]

# 支持 WASM32 和 WASM64
[target.'cfg(target_family = "wasm")'.dependencies]

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown", "wasm64-unknown-unknown"]