[package]
name = "autozig-engine"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Core engine for autozig code generation"

[dependencies]
autozig-parser = { path = "../parser", version = "0.1.0" }
syn = { version = "2.0", features = ["full", "parsing", "printing", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
walkdir = "2.4"
anyhow = "1.0"
thiserror = "1.0"
sha2 = "0.10"

[features]
build = []