[package]
name = "autozig-macro"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Procedural macro for autozig"
repository = "https://github.com/layola13/autozig"
homepage = "https://github.com/layola13/autozig"
documentation = "https://docs.rs/autozig-macro"
keywords = ["ffi", "zig", "macro"]
categories = ["development-tools::ffi", "api-bindings"]

[lib]
proc-macro = true

[dependencies]
autozig-parser = { path = "../parser", version = "0.1.1" }
syn = { version = "2.0", features = ["full", "parsing", "printing"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0"