[package]
name = "autozig-wasm64bit"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
autozig = { path = "../.." }

[build-dependencies]
autozig-build = { path = "../../gen/build" }
anyhow = "1.0"

[profile.release]
opt-level = "z"     # 优化大小
lto = false         # 禁用 LTO 以保留符号
codegen-units = 1   # 单个代码生成单元

# WebAssembly 64-bit 特定配置
[profile.release.package."*"]
opt-level = 3

# 编译命令（wasm64是tier-3 target，需要build-std）：
# rustup component add rust-src
# cargo +nightly build --target wasm64-unknown-unknown -Z build-std=std,panic_abort --release