[package]
name = "autozig-wasm-filter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
autozig = { path = "../.." }

[build-dependencies]
autozig-build = { path = "../../gen/build" }
anyhow = "1.0"

[profile.release]
opt-level = "s"  # 优化体积
lto = true       # Link Time Optimization