[package]
name = "autozig-wasm-light"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
autozig = { path = "../.." }

[build-dependencies]
autozig-build = { path = "../../gen/build" }
anyhow = "1.0"

[profile.release]
opt-level = 3       # 最大性能优化
lto = true          # Link Time Optimization
codegen-units = 1   # 单个代码生成单元，更好的优化